--- a/.github/workflows/linkedin-devlog-reusable.yml
+++ b/.github/workflows/linkedin-devlog-reusable.yml
@@ -31,9 +31,11 @@ jobs:
           REPO: ${{ github.repository }}
           BEFORE: ${{ github.event.before }}
           AFTER: ${{ github.sha }}
+          LINKEDIN_VERSION: "202601"   # YYYYMM
+
         run: |
           python3 - <<'PY'
-          import json, os, re, subprocess, sys, urllib.parse, urllib.request
+          import json, os, re, subprocess, sys, urllib.parse, urllib.request, urllib.error
 
           def sh(*cmd):
             return subprocess.check_output(cmd, text=True).strip()
@@ -90,29 +92,54 @@ jobs:
           if not token:
             print("No LinkedIn token available"); sys.exit(1)
 
-          body = {
-            "author": author,
-            "lifecycleState": "PUBLISHED",
-            "specificContent": {
-              "com.linkedin.ugc.ShareContent": {
-                "shareCommentary": {"text": text},
-                "shareMediaCategory": "ARTICLE",
-                "media": [{"status":"READY","originalUrl": compare_url}],
-              }
-            },
-            "visibility": {"com.linkedin.ugc.MemberNetworkVisibility": "PUBLIC"},
-          }
-
-          req = urllib.request.Request(
-            "https://api.linkedin.com/v2/ugcPosts",
-            data=json.dumps(body).encode("utf-8"),
-            headers={
-              "Authorization": f"Bearer {token}",
-              "Content-Type": "application/json",
-              "X-Restli-Protocol-Version": "2.0.0",
+          def http_json(url, token, body):
+            ver = os.getenv("LINKEDIN_VERSION", "202601")  # YYYYMM
+            req = urllib.request.Request(
+              url,
+              data=json.dumps(body).encode("utf-8"),
+              headers={
+                "Authorization": f"Bearer {token}",
+                "Content-Type": "application/json",
+                "X-Restli-Protocol-Version": "2.0.0",
+                "Linkedin-Version": ver,
             },
             method="POST",
           )
-          with urllib.request.urlopen(req, timeout=30) as r:
-            print("Posted:", r.status)
+          try:
+            with urllib.request.urlopen(req, timeout=30) as r:
+              return r.status, dict(r.headers), r.read().decode("utf-8", "replace")
+          except urllib.error.HTTPError as e:
+            err_body = e.read().decode("utf-8", "replace")
+            print("LinkedIn HTTPError:", e.code, e.reason)
+            print("Body:", err_body)
+            raise
+
+            print("Token length:", len(token))
+
+          # token validity check (should be 200)
+          try:
+              req = urllib.request.Request(
+                  "https://api.linkedin.com/v2/userinfo",
+                  headers={"Authorization": f"Bearer {token}"},
+                  method="GET",
+              )
+              with urllib.request.urlopen(req, timeout=30) as r:
+                  print("userinfo:", r.status)
+          except urllib.error.HTTPError as e:
+              print("userinfo failed:", e.code, e.read().decode("utf-8","replace"))
+              raise
+          
+          # Posts API (text-only)
+          post_body = {
+              "author": author,
+              "commentary": text,
+              "visibility": "PUBLIC",
+              "distribution": {"feedDistribution": "MAIN_FEED", "targetEntities": [], "thirdPartyDistributionChannels": []},
+              "lifecycleState": "PUBLISHED",
+              "isReshareDisabledByAuthor": False,
+          }
+          
+          status, headers, body = http_json("https://api.linkedin.com/rest/posts", token, post_body)
+          print("Posted:", status)
+          print("x-restli-id:", headers.get("x-restli-id"))
           PY
